vinculado os inputs c as variaveis com ngModel

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <label>Nombre:</label>
-<input type="text">
+<input type="text" [(ngModel)]="name">
 <label>Email:</label>
-<input type="text">
+<input type="text" [(ngModel)]="email">
 <label>Telefone:</label>
-<input type="number">
+<input type="number" [(ngModel)]="phoneNumber">
