para visualizar o valor das variaveis

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,5 @@
 <input type="text" [(ngModel)]="email">
 <label>Telefone:</label>
 <input type="number" [(ngModel)]="phoneNumber">
+
+{{ name }} - {{ email }} - {{ phoneNumber }}
