criando o botão que chama sendValues()

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,3 +6,5 @@
 <input type="number" [(ngModel)]="phoneNumber">
 
 {{ name }} - {{ email }} - {{ phoneNumber }}
+
+<button (click)="sendValues()"> Enviar</button>
