adc button mat-button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,8 @@
             <p>{{ phoneNumber.value }}</p>
         </mat-form-field>
 
+        <button mat-button color="primary" (click)="sendValues()">Enviar</button>
+
     </div>
 
 </div>
