input nome e email com validação

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
             <mat-label>Email</mat-label>
             <input matInput [formControl]="email">
         </mat-form-field>
-        <p>{{ email.value }}</p>
+        <p>{{ email.valid }}</p>
 
         <mat-form-field appearance="fill">
             <mat-label>Telefone</mat-label>
