--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
         </mat-form-field>
         <p>{{ phoneNumber.value }}</p>
 
-        <button mat-button color="primary" (click)="sendValues()">Enviar</button>     
+        <button mat-button color="primary" (click)="sendValues()" [disabled]="form.invalid">Enviar</button>     
 
     </div>
 
