--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,11 @@
 
         <mat-form-field appearance="fill">
             <mat-label>Nombre</mat-label>
-            <input matInput formControlName="name">          
+            <input matInput formControlName="name">   
+        <div *ngIf="form.get('name').invalid && form.get('name').touched">
+            <mat-error *ngIf="form.get('name').erros.['required']"></mat-error>
+        </div>
+            
         </mat-form-field>
         <p>{{ name.value }}</p>
 
